# python_snippets

./: .gitignore  README.md  pyproject.toml
scripts/: flake8.sh  isort.sh
src/decorators/: 01_simple.py  02_with_arguments.py  03_functools_wraps.py  04_decorators_with_arguments.py  05_stateful_decorators.py  06_classes_as_decorators_1.py  06_classes_as_decorators_2.py  07_caching_return_values.py  08_asyncio.py  09_async_classes_as_decorators_1.py  09_async_classes_as_decorators_2.py
