[tool.poetry]
name = "python_snippets"
version = "0.1.0"
description = ""
authors = ["Angel Felipe Santaliestra Pasias <afsantaliestra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
